# AmazonsEngine

./: .gitignore  CMakeLists.txt  README.md  bitboard.cpp  bitboard.h  evaluate.cpp  evaluate.h  line_pattern.cpp  line_pattern.h  main.cpp  mcts.cpp  mcts.h  movegen.cpp  movegen.h  movepicker.cpp  movepicker.h  optimization_summary.md  policy_prior.cpp  policy_prior.h  position.cpp  position.h  rays.cpp  rays.h  remove-message.txt  search.cpp  search.h  search_threads.cpp  search_threads.h  stockfish_aligned_changes.md  tt.h  types.h
.serena/: project.yml
gui/: index.html  server.py
nnue/: nnue.cpp  nnue.h
runs/nnue_experiment/: events.out.tfevents.1777806539.M39.28448.0  events.out.tfevents.1777806830.M39.28660.0  events.out.tfevents.1777807036.M39.19028.0  events.out.tfevents.1777807153.M39.27784.0  events.out.tfevents.1777807683.M39.22056.0  events.out.tfevents.1777807861.M39.25048.0  events.out.tfevents.1777808026.M39.26876.0  events.out.tfevents.1777808065.M39.25896.0  events.out.tfevents.1777808661.M39.26984.0  events.out.tfevents.1777808782.M39.22480.0  events.out.tfevents.1777883681.M39.28872.0
scratch/: debug_comm.py
test/: abl_+lmp_20260607_210409.json  abl_+lmp_20260607_210409.txt  abl_+nmp+softtail_20260607_210834.json  abl_+nmp+softtail_20260607_210834.txt  abl_+nmp_20260607_210200.json  abl_+nmp_20260607_210200.txt  abl_+softtail_20260607_210621.json  abl_+softtail_20260607_210621.txt  abl_baseline_20260607_205941.json  abl_baseline_20260607_205941.txt  abl_mcts_baseline_20260607_211649.json  abl_mcts_baseline_20260607_211649.txt  abl_mcts_bounded_20260607_211859.json  abl_mcts_bounded_20260607_211859.txt  abl_mcts_fast_20260607_212124.json  abl_mcts_fast_20260607_212124.txt  bench_refactor.cpp  config1_log_20260607_204501.txt  config2_log_20260607_204502.txt  config3_log_20260607_204502.txt  config3_results_20260607_204502.json  config4_log_20260607_204506.txt  match_elo.py  match_log_20260607_023333.txt  match_log_20260607_024526.txt  match_log_20260607_025936.txt  match_log_20260607_031257.txt  match_log_20260607_032759.txt  match_log_20260607_034212.txt  match_log_20260607_035800.txt  match_log_20260607_041357.txt  match_log_20260607_041553.txt  match_log_20260607_041602.txt  match_log_20260607_140517.txt  match_log_20260607_141235.txt  match_log_20260607_141938.txt  match_log_20260607_142712.txt  match_log_20260607_143417.txt  match_log_20260607_144344.txt  match_log_20260607_145038.txt  (+42 more)
train/: convert_selfplay.cpp  dataset.py  train.py  train_policy_prior.py
